# music-sync-toolbox

./: README.md  config.toml.example  main.py  pyproject.toml
discogs/: config.py  dtag.py
local_files/: rename_file.py
scripts/: __init__.py  cli_helpers.py  local_to_spotify.py  local_to_ytmusic.py  rename_files_from_tags.py  soulseek_download.py  update_tags_from_discogs.py
soulseek/: __init__.py  client.py  config.py  search_download.py
spotify/: config.py  select_playlist.py
tests/: test_soulseek_filter.py
ytmusic/: config.py  list_user_playlists.py  select_playlist.py  setup_ytmusic.py
