[project]
name = "music-sync-toolbox"
version = "2.1.0"
description = "A CLI toolbox for syncing your music across Spotify, YouTube Music and local music files, using Discogs as a source of truth."
authors = [
    { name = "Aesir" },
    { name = "bolinocroustibat", email = "me@adriencarpentier.com" },
]
dependencies = [
    "discogs-client==2.3.0",
    "fuzzywuzzy<1.0.0,>=0.18.0",
    "inquirer>=2.10.1",
    "mutagen<2.0.0,>=1.45.1",
    "requests<3.0.0,>=2.25.1",
    "slskd-api>=0.2.3",
    "rich>=13.7.0",
    "spotipy>=2.23.0",
    "ytmusicapi>=0.23.0",
    "python-Levenshtein>=0.23.0",
]
requires-python = ">=3.10,<4.0"
license = { text = "MIT" }

[project.scripts]
music-sync-toolbox = "main:main"
music-sync = "main:main"

[tool]
rye = { dev-dependencies = [
    "ruff>=0.11.8",
] }

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
